fixing small thing spacing font ect..

--- a/_css/styles.css
+++ b/_css/styles.css
@@ -2,6 +2,10 @@
   margin-top: 50px;
 }
 
+.mt-70 {
+  margin-top: 70px;
+}
+
 .mt-15 {
   margin-top: 15px;
 }
@@ -326,7 +330,7 @@ input {
 }
 
 .shop {
-  margin-top: 50px;
+  margin-top: 80px;
 }
 
 .see-more {
@@ -337,7 +341,7 @@ input {
 
 .category {
   text-align: center;
-  font-size: 42px;
+  font-size: 32px;
   margin-left: 115px;
 }
 
@@ -414,12 +418,13 @@ input {
 
 .smart-home-title {
   width: 1360px;
+  margin-top: 30px;
 }
 
 .windex {
   width: 1360px;
   display: flex;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .cleaning img {
@@ -453,6 +458,8 @@ input {
 
 .shopping-row {
   width: 1360px;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
 .shopping-time img {
@@ -463,7 +470,7 @@ input {
 .shopping-time {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 30px;
 }
 
 .first-shop {
@@ -476,8 +483,8 @@ input {
 
 .shopping-time h3 {
   font-size: 14px;
-  margin-top: 15px;
-  text-align: center;
+  margin-top: 30px;
+  text-align: -webkit-left;
 }
 
 .col-xs-12 h3 {
@@ -504,7 +511,6 @@ input {
 }
 
 .spring-right {
-  margin-top: 50px;
   text-align: center;
 }
 
@@ -516,6 +522,7 @@ input {
 .spring-rows {
   display: flex;
   justify-content: space-between;
+  margin-top: 30px;
 }
 
 .serach-footer {
@@ -866,13 +873,5 @@ input {
 
   .footer-search {
     margin-top: 30px;
-  }
-
-  .text-box {
-    justify-content: center;
-    margin-bottom: 15px;
-  }
-.footer-icons {
-  justify-content: space-evenly;
   }
 }
